--- a/package.json
+++ b/package.json
@@ -30,5 +30,18 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "",
+  "main": "index.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/kabhimanyu656/React.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/kabhimanyu656/React/issues"
+  },
+  "homepage": "https://github.com/kabhimanyu656/React#readme"
 }
